Writing more test and getting that coverage up

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,14 @@
+# [aliases]
+# test=pytest
+# cov=pytest --cov --cov-report html
+
+
 [metadata]
 description-file = README.md
 
 [pep8]
 ignore=E111,E114
-
-max-line-length=120
+max-line-length=100
 
 [tool:pytest]
 pep8ignore = E111 E114
