--- a/setup.cfg
+++ b/setup.cfg
@@ -14,3 +14,6 @@ max-line-length=100
 pep8ignore = E111 E114
 pep8maxlinelength = 120k
 
+[flake8]
+ignore = E501, W503 
+exclude = .git,__pycache__,docs/source/conf.py,old,build,dist
