--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ language: python
 python:
   - "3.6"
 
-sudo: false # this allows TravisCI to use the fast Docker build environment rather than the slower VMs
+sudo: false
+
 
 install:
   - pip3 install mock
