--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
+dist: xenial
 language: python
+
 python:
+  - "3.5"
   - "3.6"
+  - "3.7"
 
 sudo: false
 
@@ -8,7 +12,11 @@ sudo: false
 install:
   - pip3 install mock
   - pip3 install -e .
+  - pip3 install -r requirements.txt
 
 script:
   - make test
   - python -m unittest discover --verbose
+
+after_success:
+  - coveralls
