--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,29 @@
-mock
-flake8
-pylint<2
+## The following requirements were added by pip freeze:
+appdirs==1.4.3
+astroid==2.2.5
+attrs==19.1.0
+autopep8==1.4.3
+black==19.3b0
+certifi==2019.6.16
+chardet==3.0.4
+Click==7.0
+coverage==4.5.3
+coveralls==1.8.1
+docopt==0.6.2
+entrypoints==0.3
+flake8==3.7.7
+idna==2.8
+isort==4.3.16
+lazy-object-proxy==1.3.1
+mccabe==0.6.1
+mock==2.0.0
+pbr==5.1.3
+pycodestyle==2.5.0
+pyflakes==2.1.1
+pylint==2.3.1
+requests==2.22.0
+six==1.12.0
+toml==0.10.0
+typed-ast==1.3.1
+urllib3==1.25.3
+wrapt==1.11.1
