--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@ dist: xenial
 language: python
 
 python:
-  - "3.5"
   - "3.6"
   - "3.7"
 
@@ -17,6 +16,7 @@ install:
 script:
   - make test
   - python -m unittest discover --verbose
+  - make coverage
 
 after_success:
   - coveralls
