--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 ## The following requirements were added by pip freeze:
 appdirs==1.4.3
 astroid==2.2.5
+atomicwrites==1.3.0
 attrs==19.1.0
 autopep8==1.4.3
 black==19.3b0
@@ -13,17 +14,27 @@ docopt==0.6.2
 entrypoints==0.3
 flake8==3.7.7
 idna==2.8
+importlib-metadata==0.18
 isort==4.3.16
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
 mock==2.0.0
+more-itertools==7.0.0
+packaging==19.0
 pbr==5.1.3
+pluggy==0.12.0
+py==1.8.0
 pycodestyle==2.5.0
 pyflakes==2.1.1
 pylint==2.3.1
+pyparsing==2.4.0
+pytest==4.6.3
+pytest-cov==2.7.1
 requests==2.22.0
 six==1.12.0
 toml==0.10.0
 typed-ast==1.3.1
 urllib3==1.25.3
+wcwidth==0.1.7
 wrapt==1.11.1
+zipp==0.5.1
