Integrating the depender in the manager

--- a/.pylintrc
+++ b/.pylintrc
@@ -8,7 +8,7 @@ max-branches=20
 
 [FORMAT]
 max-line-length = 120
-disable=locally-disabled,locally-enabled,missing-docstring,duplicate-code,fixme,cyclic-import,redefined-variable-type,stop-iteration-return, R1705, E1136, W0613
+disable=locally-disabled,locally-enabled,missing-docstring,duplicate-code,fixme,cyclic-import,redefined-variable-type,stop-iteration-return, R1705, E1136, W0613, R0902
 
 [TYPECHECK]
 
