--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,6 @@ astroid==2.2.5
 atomicwrites==1.3.0
 attrs==19.1.0
 autopep8==1.4.4
-black==19.3b0
 certifi==2019.6.16
 chardet==3.0.4
 Click==7.0
@@ -26,7 +25,7 @@ pluggy==0.12.0
 py==1.8.0
 pycodestyle==2.5.0
 pyflakes==2.1.1
-pylint==2.3.1
+pylint==2.3.
 pyparsing==2.4.0
 pytest==5.0.0
 pytest-cov==2.7.1
