--- a/requirements.txt
+++ b/requirements.txt
@@ -29,11 +29,5 @@ pylint==2.3.
 pyparsing==2.4.0
 pytest==5.0.0
 pytest-cov==2.7.1
-requests==2.22.0
 six==1.12.0
-toml==0.10.0
-typed-ast==1.4.0
-urllib3==1.25.3
-wcwidth==0.1.7
-wrapt==1.11.2
-zipp==0.5.1
+termtables=0.1.1
