--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,15 @@
 ## The following requirements were added by pip freeze:
-appdirs==1.4.3
-astroid==2.2.5
-atomicwrites==1.3.0
-attrs==19.1.0
 autopep8==1.4.4
-certifi==2019.6.16
-chardet==3.0.4
-Click==7.0
+entrypoints==0.3
+docopt==0.6.2
 coverage==4.5.3
 coveralls==1.8.1
-docopt==0.6.2
-entrypoints==0.3
-flake8==3.7.7
-idna==2.8
-importlib-metadata==0.18
-isort==4.3.21
-lazy-object-proxy==1.4.1
-mccabe==0.6.1
 mock==3.0.5
 more-itertools==7.1.0
 packaging==19.0
-pbr==5.3.1
-pluggy==0.12.0
-py==1.8.0
 pycodestyle==2.5.0
+flake8==3.7.7
 pyflakes==2.1.1
-pylint==2.3.
-pyparsing==2.4.0
-pytest==5.0.0
+pylint==2.4.4
 pytest-cov==2.7.1
-six==1.12.0
-termtables==0.1.1
+pytest==5.0.0
