--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,6 +20,9 @@ repos:
     -   id: double-quote-string-fixer
     -   id: name-tests-test
     -   id: requirements-txt-fixer
+    -   id: check-executables-have-shebangs
+    -   id: check-json
+    -   id: double-quote-string-fixer
 -   repo: https://gitlab.com/pycqa/flake8
     rev: 3.8.0
     hooks:
